Created total time method in astronaut model. Incorporated total time method into astronauts index view.

--- a/app/views/astronauts/index.html.erb
+++ b/app/views/astronauts/index.html.erb
@@ -12,7 +12,8 @@
           <%= mission.title %>
           <% j += 1 %>
         </Div>
-      <% end %>
+      <% end %><br>
+      <h4>Total Time in Space: <%= astronaut.total_time %> days</h4>
   </Div><br>
 <% end %>
 
