Updated feature test to include a log out option. Added a helper method for current user in application controller.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,1 @@
-<h1>Hi, <%= @user.username %>! This is your profile page.</h1>
+<h1>Hi, <%= current_user.username %>! This is your profile page.</h1>
